--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -15,4 +15,4 @@ jobs:
         run: cmake -S . -B build && cmake --build build
 
       - name: Run tests
-        run: cd build && ctest
+        run: cd build && ctest -V
